<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/photopage_tool_bar"
    android:orientation="horizontal"
    android:elevation="@dimen/bottom_menu_elevation"
    android:layout_gravity="bottom"
    android:gravity="center_vertical"
    android:background="@color/bottom_menu_color_white"
    android:visibility="gone"
    >

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/smaller_front_size"
        android:drawableTop="@mipmap/ic_black_share_new"
        android:gravity="center"
        android:background="@null"
        android:text="@string/share"
        android:layout_marginLeft="@dimen/bottom_menu_margin"
        android:textColor="@color/bottom_menu_color"
        />
    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/smaller_front_size"
        android:drawableTop="@mipmap/ic_black_edit_new"
        android:gravity="center"
        android:background="@null"
        android:text="@string/edit"
        android:textColor="@color/bottom_menu_color"
        />
    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/smaller_front_size"
        android:drawableTop="@mipmap/ic_black_delete_new"
        android:gravity="center"
        android:background="@null"
        android:text="@string/delete"
        android:textColor="@color/bottom_menu_color"
        />
    <Button
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/smaller_front_size"
        android:drawableTop="@mipmap/ic_black_more_new"
        android:gravity="center"
        android:background="@null"
        android:text="@string/more"
        android:layout_marginRight="@dimen/bottom_menu_margin"
        android:textColor="@color/bottom_menu_color"
        />

</LinearLayout>