<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg" >


    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_size"
            android:textColor="#007AFF"
            android:text="@string/cancel"
            android:background="@null"
            />

        <View
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/big_size"
            android:textColor="#007AFF"
            android:text="@string/save"
            android:background="@null"
            />

    </LinearLayout>

    <Button
        android:id="@+id/compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="537dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/compare_original"
        android:visibility="invisible"
        android:background="@drawable/compare_n"
        />

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_layout"
        android:layout_above="@id/bottom_panel"
        android:gravity="center" >

        <ImageView
            android:id="@+id/pictureShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_alignParentBottom="true"
        >
    </FrameLayout>
</RelativeLayout>