<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        >

        <SeekBar
            android:id="@+id/seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerPanel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:id="@+id/enhance_brightness"
            android:drawableTop="@drawable/light_white_n"
            android:text="@string/editor_grad_brightness"
            android:textColor="@color/default_text_color_1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/enhance_contrast"
            android:drawableTop="@drawable/contrast_white_n"
            android:text="@string/editor_grad_contrast"
            android:textColor="@color/default_text_color_1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/enhance_color_temperature"
            android:drawableTop="@drawable/colortemperature_white_n"
            android:text="@string/editor_grad_color_temperature"
            android:textColor="@color/default_text_color_1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/enhance_saturation"
            android:drawableTop="@drawable/satura_white_n"
            android:text="@string/editor_grad_saturation"
            android:textColor="@color/default_text_color_1"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <Button
            android:id="@+id/cancel"
            android:background="@drawable/close_white_n"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/revocation"
            android:background="@drawable/revocation_white_n"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/cancel_revocation"
            android:background="@drawable/cacel_revocation_white_n"
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <View
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/save"
            android:background="@drawable/save_white_n"
            android:layout_width="20dp"
            android:layout_height="20dp" />

    </LinearLayout>
</LinearLayout>
